--- a/index.html
+++ b/index.html
@@ -2,71 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chandra Prakash | Java Developer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f7f7f7;
-      color: #333;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
     }
 
     header {
-      background-color: #1f2937;
-      color: #fff;
-      padding: 40px 20px;
+      background: linear-gradient(to right, #343a40, #495057);
+      color: white;
+      padding: 60px 0;
       text-align: center;
     }
 
-    header h1 {
-      margin: 0;
-    }
-
-    header p {
-      margin-top: 10px;
-      color: #ddd;
-    }
-
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    h2 {
-      border-bottom: 2px solid #e91e63;
-      padding-bottom: 5px;
-      color: #1f2937;
-    }
-
-    .project {
-      background-color: #fff;
-      margin-bottom: 20px;
-      padding: 20px;
+    .section-title {
       border-left: 5px solid #e91e63;
-      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+      padding-left: 10px;
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
+
+    .project-card {
+      border-left: 5px solid #e91e63;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
     footer {
-      background-color: #1f2937;
+      background-color: #343a40;
       color: #ccc;
+      padding: 20px 0;
       text-align: center;
-      padding: 20px;
     }
 
-    .contact a {
+    a {
       color: #e91e63;
       text-decoration: none;
     }
 
-    .contact a:hover {
+    a:hover {
       text-decoration: underline;
-    }
-
-    ul {
-      line-height: 1.6;
     }
   </style>
 </head>
@@ -74,84 +51,114 @@
 
 <header>
   <h1>Chandra Prakash</h1>
-  <p>Senior Java Developer | Spring Boot | Hibernate | REST APIs</p>
-  <p>Email: <a href="mailto:prakash.mehta003@gmail.com" style="color:#e91e63;">prakash.mehta003@gmail.com</a> | Mobile: +91-7488796199</p>
+  <p class="lead">Senior Java Developer | Spring Boot | Hibernate | REST APIs</p>
+  <p>Email: <a href="mailto:prakash.mehta003@gmail.com" class="text-decoration-none text-warning">prakash.mehta003@gmail.com</a> | Mobile: +91-7488796199</p>
 </header>
 
-<section>
-  <h2>Professional Summary</h2>
-  <ul>
-    <li>4+ years of experience in Java/J2EE development with Spring MVC, Hibernate, RESTful services.</li>
-    <li>Strong hands-on in JSP, Servlets, JDBC, PL/SQL, Jasper Reports, and JUnit.</li>
-    <li>Experience with front-end technologies: HTML, CSS, Bootstrap, jQuery.</li>
-    <li>Worked with tools like SVN, Maven, Log4J; IDEs like Eclipse, NetBeans, IntelliJ.</li>
-  </ul>
-</section>
+<div class="container py-5">
 
-<section>
-  <h2>Work Experience</h2>
-  <ul>
-    <li><strong>Senior Software Engineer</strong> – DXC Technology, Bengaluru (2020–Present)</li>
-    <li><strong>Senior Software Engineer</strong> – Hamsa Soham Pvt Ltd, Patna (Mar 2017–2019)</li>
-    <li><strong>Software Engineer</strong> – Lue Info Services Pvt Ltd, Patna (Apr 2015–Jan 2017)</li>
-  </ul>
-</section>
+  <section>
+    <h2 class="section-title">Professional Summary</h2>
+    <ul>
+      <li>4+ years of experience in Java/J2EE development with Spring MVC, Hibernate, RESTful services.</li>
+      <li>Skilled in JSP, Servlets, JDBC, PL/SQL, Jasper Reports, JUnit.</li>
+      <li>Front-end: HTML, CSS, Bootstrap, jQuery, AJAX</li>
+      <li>Worked with SVN, Maven, Log4J, Eclipse, NetBeans, IntelliJ</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Education</h2>
-  <p><strong>MCA</strong> – IGNOU, Patna</p>
-</section>
+  <section>
+    <h2 class="section-title">Experience</h2>
+    <ul>
+      <li><strong>DXC Technology</strong> – Senior Software Engineer (2020–Present)</li>
+      <li><strong>Hamsa Soham Pvt Ltd</strong> – Senior Software Engineer (2017–2019)</li>
+      <li><strong>Lue Info Services Pvt Ltd</strong> – Software Engineer (2015–2017)</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Skills</h2>
-  <ul>
-    <li><strong>Languages:</strong> Java, SQL, PL/SQL, JavaScript, CSS</li>
-    <li><strong>Frameworks:</strong> Spring, Hibernate</li>
-    <li><strong>Web Tech:</strong> JSP, Servlets, HTML, Bootstrap, AJAX</li>
-    <li><strong>Databases:</strong> Oracle, MySQL</li>
-    <li><strong>Tools:</strong> Maven, SVN, JUnit, Jasper Reports</li>
-    <li><strong>Servers:</strong> JBoss, Apache Tomcat</li>
-  </ul>
-</section>
+  <section>
+    <h2 class="section-title">Education</h2>
+    <p><strong>MCA</strong> – IGNOU, Patna</p>
+  </section>
 
-<section>
-  <h2>Projects</h2>
+  <section>
+    <h2 class="section-title">Skills</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <ul>
+          <li><strong>Languages:</strong> Java, SQL, PL/SQL, JavaScript, CSS</li>
+          <li><strong>Frameworks:</strong> Spring, Hibernate</li>
+          <li><strong>Web:</strong> JSP, Servlets, HTML5, Bootstrap</li>
+        </ul>
+      </div>
+      <div class="col-md-6">
+        <ul>
+          <li><strong>Databases:</strong> Oracle, MySQL</li>
+          <li><strong>Tools:</strong> Maven, SVN, JUnit, Jasper Reports</li>
+          <li><strong>Servers:</strong> JBoss, Tomcat</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-  <div class="project">
-    <h3>E-Procurement – DXC Technology</h3>
-    <p><strong>Client:</strong> Govt. of Karnataka</p>
-    <p>State-wide procurement platform for handling end-to-end government tendering, contract, and payment processes.</p>
-    <p><strong>Role:</strong> Support Executive</p>
-  </div>
+  <section>
+    <h2 class="section-title">Projects</h2>
 
-  <div class="project">
-    <h3>Hospital Management System – Hamsa Soham</h3>
-    <p>Healthcare platform for managing patient records, treatment, queue, doctor visits, and reporting modules.</p>
-    <p><strong>Tech:</strong> JSF, Spring MVC, Hibernate, REST APIs, Bootstrap, MySQL</p>
-  </div>
+    <div class="card mb-4 project-card">
+      <div class="card-body">
+        <h5 class="card-title">E-Procurement – DXC Technology</h5>
+        <p class="card-text"><strong>Client:</strong> Govt. of Karnataka</p>
+        <p class="card-text">A procurement system enabling online tendering, contract management, and payment for state agencies.</p>
+        <p class="card-text"><strong>Role:</strong> Support Executive</p>
+      </div>
+    </div>
 
-  <div class="project">
-    <h3>OYE5 – Online Shopping App</h3>
-    <p>E-commerce system with product listing, purchase flow, and payment history for Android/iOS.</p>
-    <p><strong>Tech:</strong> Spring MVC, Hibernate, Elastic Search, JAX-RS</p>
-  </div>
+    <div class="card mb-4 project-card">
+      <div class="card-body">
+        <h5 class="card-title">Hospital Management System</h5>
+        <p class="card-text"><strong>Client:</strong> Hamsa Soham Healthcare</p>
+        <p class="card-text">Modules for patient care, treatment tracking, and doctor management.</p>
+        <p class="card-text"><strong>Tech:</strong> JSF, Spring MVC, Hibernate, REST, Bootstrap, MySQL</p>
+      </div>
+    </div>
 
-  <div class="project">
-    <h3>Wealthsa – Event Management System</h3>
-    <p>Event platform with role-based access for admins and members, payment management, and automated messaging.</p>
-    <p><strong>Tech:</strong> JSP, Spring MVC, Hibernate, Interceptor Auth, MySQL</p>
-  </div>
+    <div class="card mb-4 project-card">
+      <div class="card-body">
+        <h5 class="card-title">OYE5 – Online Shopping App</h5>
+        <p class="card-text">Mobile-first shopping application for product viewing, purchase, and payment.</p>
+        <p class="card-text"><strong>Tech:</strong> Spring MVC, Hibernate, ElasticSearch, JAX-RS</p>
+      </div>
+    </div>
 
-  <div class="project">
-    <h3>Business Partner Integrity</h3>
-    <p>Partner management platform for onboarding, risk management, contract handling, and data collection.</p>
-    <p><strong>Tech:</strong> Spring MVC, Hibernate, Token Auth, DAO/DTO patterns</p>
-  </div>
-</section>
+    <div class="card mb-4 project-card">
+      <div class="card-body">
+        <h5 class="card-title">Wealthsa – Event Management</h5>
+        <p class="card-text">Multi-role event system with payment and messaging automation.</p>
+        <p class="card-text"><strong>Tech:</strong> JSP, Spring MVC, Interceptors, Hibernate, MySQL</p>
+      </div>
+    </div>
+
+    <div class="card mb-4 project-card">
+      <div class="card-body">
+        <h5 class="card-title">Business Partner Integrity</h5>
+        <p class="card-text">Partner onboarding & training app with token authentication and contract modules.</p>
+        <p class="card-text"><strong>Tech:</strong> Spring MVC, Hibernate, DTO pattern, REST</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Contact</h2>
+    <p><strong>Email:</strong> <a href="mailto:prakash.mehta003@gmail.com">prakash.mehta003@gmail.com</a></p>
+    <p><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+  </section>
+</div>
 
 <footer>
-  <p>© 2025 Chandra Prakash | Java Developer Portfolio</p>
+  <p>© 2025 Chandra Prakash | Java Developer</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
